# polyvers

./: .coveragerc  .gitignore  .polyvers.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  appveyor.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  vendorize.toml
.github/: ISSUE_TEMPLATE.md
changes.d/: .gitignore  0.feat  00.feat  1.break  2.break  namengraves.feat  template.rst  towncrier.doc
docs/: .gitignore  Makefile  conf.py  contributing.rst  index.rst  installation.rst  make.bat  reference.rst  usage-pvcmd.rst  usage-pvlib.rst  usage.rst
multivers/: __init__.py  __main__.py  autoinstance_traitlet.py  multivers.py
polyvers/: __init__.py  __main__.py  autoinstance_traitlet.py  bumpcmd.py  bumpver.py  cfgcmd.py  cli.py  cmdlets.py  cmdutils.py  core.py  default-config.yaml  engrave.py  errlog.py  fileutils.py  interp_traitlet.py  interpctxt.py  logconfutils.py  mainpump.py  mlogutils.py  mycfgcmd.py  oscmd.py  polyvers.py  polyverslib.py  pvproject.py  pvtags.py  slice_traitlet.py  strexpand_traitlet.py  traitcmd.py  traitcmdutils.py  traitutils.py  vermath.py  vtags.py  yamlconfloader.py
polyvers/_vendor/traitlets/: __init__.py  _version.py  log.py  traitlets.py
polyvers/_vendor/traitlets/config/: __init__.py  application.py  configurable.py  loader.py  manager.py  sphinxdoc.py
polyvers/_vendor/traitlets/utils/: bunch.py  (+3 more)
polyvers/cmdlet/: autoinstance_traitlet.py  cmdlets.py  interpctxt.py
polyvers/test/: __init__.py  test_cmdutils.py
polyvers/utils/: logconfutils.py
polyversion/: README.rst  setup.py
pvcmd/polyvers/: __init__.py  __main__.py  bumpcmd.py  cli.py  engrave.py  gitag.py  hooks.py  pvproject.py  pvtags.py  vermath.py
pvcmd/polyvers/cmdlet/: cfgcmd.py  cmdlets.py  errlog.py  interpctxt.py  slicetrait.py  traitquery.py  yamlconfloader.py
pvcmd/polyvers/utils/: fileutil.py  logconfutils.py  mainpump.py  oscmd.py  yamlutil.py
pvcmd/tests/: conftest.py  test_bumpcmd.py  test_cli.py  test_docs.py  test_engrave.py  test_gitag.py  test_pv.py  test_pvtags.py  test_vermath.py
pvcmd/tests/cmdlet/: test_cmdlets.py  test_errlog.py  test_interpctxt.py  test_traitlets.py
pvcmd/tests/utils/: test_fileutil.py  test_yamlutil.py
pvlib/: LICENSE  README.rst  polyversion.py  requirements_dev.txt  setup.cfg  setup.py
pvlib/conda/recipe/: meta.yaml
pvlib/polyversion/: __init__.py  __main__.py  setuplugin.py
pvlib/polyversion/tests/: conftest.py  test_polyversion.py  test_setup_plugin.py
pvlib/tests/: conftest.py  test_polyversion.py
tests/: __init__.py  conftest.py  test_autoinstance_traitlet.py  test_bumpcmd.py  test_cfgcmd.py  test_cli.py  test_cmdlets.py  test_cmdutils.py  test_engrave.py  test_errlog.py  test_fileutils.py  test_interp_traitlet.py  test_interpctxt.py  test_logconfutils.py  test_multivers.py  test_oscmd.py  test_polyvers.py  test_polyverslib.py  test_pvproject.py  test_pvtags.py  test_slice_traitlet.py  test_strexpand_traitlet.py  test_traitlets.py  test_vermath.py  test_vtags.py
tests/cmdlet/: test_autoinstance_traitlet.py  test_autotrait.py  test_cfgcmd.py  test_cmdlets.py  test_slice_traitlet.py
tests/utils/: test_fileutils.py  test_oscmd.py
(+4 files in other folders)
