[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[global]
## Building binary packages (e.g. eggs, wheels) from non-engraved
#  sources might not work - a *setuptools* check prevents that,
# and setting this option to `true` relaxes that check.
polyversion_check_bdist_enabled = true

[flake8]
exclude = docs,.tox,.venv,build,dist,doc,.eggs,git/ext,$*,~*
          pvcmd/polyvers/_vendor,
ignore = E265,W293,E266,E731
max-line-length = 100
max-complexity = 12
doctests = true

[tool:pytest]
addopts =   --doctest-modules
            --ignore pvcmd/polyvers/_vendor
            --doctest-glob=*.rst
doctest_optionflags = NORMALIZE_WHITESPACE
                      ELLIPSIS

## See: https://pytest-cov.readthedocs.io/en/latest/config.html
[coverage:run]
omit =  pvcmd/polyvers/_vendor/*
[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if 0:
    if False:
    except ImportError


[mypy]
## Sample:
#      mypy -m polyvers.engrave
#
ignore_missing_imports =    True
follow_imports =            silent
warn_no_return =            False


[pylint]
## Sample:
#      pylint --rcfile=setup.cfg polyvers
#
disable =   C0103,
            # Missing module docstring
            C0111,
ignore = _vendor
#ignore-docstrings = yes
output-format = colorized


[aliases]
test = pytest
# Define setup.py command aliases here
