[bdist_wheel]
universal = 1
dist_dir = ../dist

[metadata]
license_file = LICENSE

[global]
## Building binary packages (e.g. eggs, wheels) from non-engraved
#  sources might not work - a *setuptools* check prevents that,
# and setting this option to `true` relaxes that check.
skip_polyversion_check = false

