[bdist_wheel]
universal = 1
dist_dir = ../dist

[metadata]
license_file = LICENSE

[global]
## Building binary packages (e.g. eggs, wheels) from non-engraved
#  sources might not work - a *setuptools* check prevents that,
#  when setting this option to `true`.
polyversion_check_bdist_enabled = true

